tests/e2e/pass/m12_struct_i8.ep
# EXIT: 65

type Data = {
    flag: u8
    value: i64
}

fun main(): void {
    let d = new Data {}
    d.flag = u8(1)
    d.value = 65
    if d.flag != u8(0) {
        exit(d.value)
    }
    exit(0)
}
